# stealth-core

./: .gitignore  Anchor.toml  Cargo.toml  README.md  index.js  package-lock.json  package.json  tsconfig.json
programs/stealth-cash/: Cargo.toml
programs/stealth-cash/src/: hasher.rs  helpers.rs  lib.rs  merkle_tree.rs  uint256.rs  utils.rs  verifier.rs
src/: minimal-demo.ts
src/utils/: solana.ts  zk.ts
svm-merkle-tree/: Cargo.toml
svm-merkle-tree/src/merkle/: merkle_tree.rs
tests/: minimal-demo.ts  stealth-cash.ts  utils.ts
